Add canonical FIAS locality autocomplete
